	  the options. (use a backslash to quote filenames
	  starting with a dash)
	- Multiple-line paragraphs that have only 1 line on the
	  bottom of the current page are not started on the
	  following page.
	- DSC comments in PostScript output were not 100%
	  conformant with the DSC spec.
	- Long table-of-contents entries are now wrapped
	  (original patch supplied by ???)

    BUG FIXES

	- Didn't allow &#nnn; character escapes inside
	  preformatted text.
	- Empty TBODY groups would cause parse_table() to
	  crash.
	- Comments were incorrectly terminated by ">" instead of
	  "-->".
	- The command-line and GUI interfaces looked for
	  "outlines" instead of "outline" for the page mode.
	- The HTML output code didn't output closing tags for
	  empty elements.
	- The GUI interface started with the compression
	  slider enabled, even for HTML output.
	- The beginnings of some lines could start with
	  whitespace.
	- Wasn't aligning images and text on lines based on the
	  line height.
	- The compression slider was enabled in the GUI even
	  though HTML output was selected.


CHANGES IN HTMLDOC v1.8.8

    NEW FEATURES

	- Added support for PDF security/encryption!
	- Now support TABLE height attribute.
	- Now generate an error message if no pages are
	  generated (with a suggestion to use the webpage
	  option.)
	- New "paths" option to specify additional directories
	  to search for files.  This is useful when the source
	  files use absolute server paths.

    CHANGES

	- Added missing casts in htmllib.cxx that were causing a
	  compile warning with some compilers.
	- No longer draw borders around empty cells in tables..
	- Now disable the TOC tab when using webpage mode.
	- Now scale title image to 100% in HTML output.
	- Now handle comments with missing whitespace after the
	  "<!--".

    BUG FIXES

	- Nested tables didn't take into account the table
	  border width, spacing, or padding values.
	- HTMLDOC crashed under Solaris when reading HTML files