@@ -1,0 +1,41 @@
+/* XPM */
+static char * htmldoc_xpm[] = {
+"26 32 6 1",
+" 	c #BFBFBFBFBFBF",
+".	c #FFFFFFFFFFFF",
+"X	c #FFFFFFFFBFBF",
+"o	c #000000000000",
+"O	c #7f7f7f7f7f7f",
+"+	c #00000000FFFF",
+"                    ......",
+" XXXXXXXXXXXXXXXXXX  .....",
+" XoooooooooXXXXXXXX X ....",
+" XXXXXXXXXXXXXXXXXX XX ...",
+" XooXoooXoXoooXooXX XXX ..",
+" XXXXXXXXXXXXXXXXXX XXXX .",
+" XoooooXoXooXoooXoX       ",
+" XXXXXXXXXXXXXXXXXXXXXXXXO",
+" XooXooooXoXoooXooXXXXXXXO",
+" XXXXXXXXXXXXXXXXXXXXXXXXO",
+" XoooXoXoooXooXooXXXXXXXXO",
+" XXXXXXXXXXXXXXXXXXXXXXXXO",
+" XXXXXXXXXXXXXXXXXXXXXXXXO",
+" XoXXoXoooooXoXXXoXoXXXXXO",
+" XoXXoXXXoXXXooXooXoXXXXXO",
+" XoXXoXXXoXXXooXooXoXXXXXO",
+" XooooXXXoXXXoXoXoXoXXXXXO",
+" XoXXoXXXoXXXoXoXoXoXXXXXO",
+" XoXXoXXXoXXXoXXXoXoXXXXXO",
+" XoXXoXXXoXXXoXXXoXooooXXO",
+" XXXXXXXXXXXXXXXXXXXXXXXXO",
+" X++++++XoooXXXooXXXooXXXO",
+" X++++++XoXXoXoXXoXoXXoXXO",
+" X++++++XoXXoXoXXoXoXXXXXO",
+" X++++++XoXXoXoXXoXoXXXXXO",
+" X++++++XoXXoXoXXoXoXXXXXO",
+" X++++++XoXXoXoXXoXoXXoXXO",
+" X++++++XoooXXXooXXXooXXXO",
+" XXXXXXXXXXXXXXXXXXXXXXXXO",
+" XXXXXXXXXXXXXXXXXXXXXXXXO",
+" XXXXXXXXXXXXXXXXXXXXXXXXO",
+"OOOOOOOOOOOOOOOOOOOOOOOOOO"};
